2011-01-13  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* Fixed typo with headers in fieldIO.cc

2010-12-08  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* Improved convergence of field outside mask for voxel
          sizes much small than 1 (histology slices at 10 microns)
	* Added option to save correction field in nu_evaluate

2010-06-15  Dave MacFarlane <david.macfarlane2@mcgill.ca>
	* Moved Splines to N3 from EBTKS (must now use EBTKS 1.6.4
          or above)

2009-06-15  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* Remove downsampling in evaluation of field (computers are fast
          now, so be more accurate by sampling at full resolution)
	* Correct the field in the region outside the mask to make 
          sure the mask varies smoothly away from the brain (important
          with the previous changes)
	* New program for the far-field correction

2009-05-08  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* Make nu_estimate_np_and_em.in invariant to voxel steps (via
          spline_smooth in EBTKS - must use EBTKS 1.6.2 or above)
	* Free memory after usage

2008-06-10  Andrew L Janke <a.janke@gmail.com>
	* updated README, merged CHANGES and WHATSNEW into NEWS
	* src/NUcorrect/nu_estimate_np_and_EM: added code to check on
	  (deprecated) use of the EM section and thus spit a warning
	* epm-header.in: removed netcdf dependency

2006-04-29  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* change xPERLx to @PERL@, etc. 

2006-04-27  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* repackaging for minc2 m4 files

2005-03-16  Andrew Janke   <a.janke@gmail.com>
	* Changed from MNI:DataDir to FindBin for binary distribution
	* Added epm-header.in for binary distribution

2005-03-08  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* src/SharpenHist/sharpen_hist.cc uses finite(), which is not
	  available on many versions of Solaris.  Added a test to look for
	  isfinite() as well as finite() in configure.in
	* src/EvaluateField/evaluateField.cc,